update terminal